--- a/src/style.css
+++ b/src/style.css
@@ -5,5 +5,14 @@
 }
 
 body {
+  height: 100vh;
   background-color: black;
+  display: flex;
+  align-items: center;
+}
+
+#canvas {
+  margin: auto;
+  justify-content: center;
+  border-radius: 10px;
 }
