--- a/src/style.css
+++ b/src/style.css
@@ -163,6 +163,10 @@ button {
   justify-content: space-between;
 }
 
+.mobile-controls {
+  display: none;
+}
+
 @media (max-width: 600px) {
   .popup {
     flex-direction: column;
@@ -184,7 +188,33 @@ button {
     height: 50px;
   }
 
+  .help-popup {
+    top: 40%;
+  }
+
   .controlls-container {
     flex-direction: column;
+  }
+
+
+  .mobile-controls {
+    width: 300px;
+    display: flex;
+    padding: 2rem;
+    gap: 3rem;
+    margin: auto;
+    justify-content: center;
+  }
+
+  .mobile-controls button {
+
+    width: 100px;
+    height: 50px;
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border: solid 1px white
   }
 }
