--- a/src/style.css
+++ b/src/style.css
@@ -193,7 +193,7 @@ button {
 
 @media (max-width: 600px) {
   .popup {
-    flex-direction: column;
+    flex-direction: column-reverse;
     width: 300px;
     top: 50%
   }
